# learn-claude-code

./: AGENTS.md  pyproject.toml
.opencode/: AGENT.md
agents/: s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py  s04_subagent.py  s05_skill_langgraph.py  s05_skill_loading.py
study-notes/: s01_agent_loop.md
