[project]
name = "learn-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "dotenv-python>=0.0.1",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
